--- a/src/Acme/StoreBundle/Resources/config/routing.yml
+++ b/src/Acme/StoreBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 acme_store_homepage:
-    pattern:  /test/{name}
+    pattern:  /test/
     defaults: { _controller: AcmeStoreBundle:Default:index }
